2016-04-06  Myles C. Maxfield  <mmaxfield@apple.com>

        REGRESSION (r188591): thingiverse.com direct messaging UI is not rendered properly
        https://bugs.webkit.org/show_bug.cgi?id=156241
        <rdar://problem/25262213>

        Reviewed by Simon Fraser.

        * fast/text/zero-sized-fonts-expected.txt: Added.
        * fast/text/zero-sized-fonts.html: Added.

2016-04-06  Matt Baker  <mattbaker@apple.com>

        Web Inspector: Improve filtering in OpenResourceDialog
        https://bugs.webkit.org/show_bug.cgi?id=155324
        <rdar://problem/25094504>

        Reviewed by Joseph Pecoraro.

        Add test coverage for ResourceQueryController.

        * inspector/unit-tests/resource-query-controller-expected.txt: Added.
        * inspector/unit-tests/resource-query-controller.html: Added.

2016-04-06  Saam barati  <sbarati@apple.com>

        jsc-layout-tests.yaml/js/script-tests/regress-141098.js failing on Yosemite Debug after r198989
        https://bugs.webkit.org/show_bug.cgi?id=156187

        Reviewed by Keith Miller.

        * js/script-tests/regress-141098.js:

2016-04-06  Michael Catanzaro  <mcatanzaro@igalia.com>

        [GTK] Belatedly rebaseline several test expectations after r196244
        
        Unreviewed

        * platform/gtk/css3/unicode-bidi-isolate-basic-expected.txt:
        * platform/gtk/fast/block/positioning/auto/vertical-rl/007-expected.txt:
        * platform/gtk/fast/block/positioning/vertical-rl/fixed-positioning-expected.txt:
        * platform/gtk/fast/borders/border-antialiasing-expected.txt:
        * platform/gtk/fast/clip/001-expected.txt:
        * platform/gtk/fast/clip/013-expected.txt:
        * platform/gtk/fast/clip/014-expected.txt:
        * platform/gtk/fast/clip/016-expected.txt:
        * platform/gtk/fast/clip/outline-overflowClip-expected.txt:
        * platform/gtk/fast/css/clip-zooming-expected.txt:
        * platform/gtk/fast/forms/validation-message-appearance-expected.txt: