@@ -107,9 +107,6 @@ public:
     bool hasPendingResources() const { return m_hasPendingResources; }
     void setHasPendingResources(bool has) { m_hasPendingResources = has; }
 
-    bool hasDisplayContents() const { return m_hasDisplayContents; }
-    void setHasDisplayContents(bool value) { m_hasDisplayContents = value; }
-
 private:
     int m_tabIndex;
     unsigned short m_childIndex;
@@ -129,7 +126,6 @@ private:
     unsigned m_childrenAffectedByLastChildRules : 1;
     unsigned m_childrenAffectedByBackwardPositionalRules : 1;
     unsigned m_childrenAffectedByPropertyBasedBackwardPositionalRules : 1;
-    unsigned m_hasDisplayContents : 1;
 
     RegionOversetState m_regionOversetState;
 
@@ -170,7 +166,6 @@ inline ElementRareData::ElementRareData(RenderElement* renderer)
     , m_childrenAffectedByLastChildRules(false)
     , m_childrenAffectedByBackwardPositionalRules(false)
     , m_childrenAffectedByPropertyBasedBackwardPositionalRules(false)
-    , m_hasDisplayContents(false)
     , m_regionOversetState(RegionUndefined)
     , m_minimumSizeForResizing(defaultMinimumSizeForResizing())
 {
@@ -198,7 +193,6 @@ inline void ElementRareData::setAfterPseudoElement(RefPtr<PseudoElement>&& pseud
 inline void ElementRareData::resetComputedStyle()
 {
     m_computedStyle = nullptr;
-    m_hasDisplayContents = false;
     setStyleAffectedByEmpty(false);
     setChildIndex(0);
 }
