@@ -161,7 +161,6 @@ RenderPtr<RenderElement> RenderElement::createFor(Element& element, Ref<RenderSt
 
     switch (style.get().display()) {
     case NONE:
-    case CONTENTS:
         return nullptr;
     case INLINE:
         return createRenderer<RenderInline>(element, WTFMove(style));
