@@ -172,6 +172,9 @@ static bool affectsRenderedSubtree(Element& element, const RenderStyle& newStyle
         return true;
     if (newStyle.display() != NONE)
         return true;
+    // FIXME: Make 'contents' an actual display property value.
+    if (hasImplicitDisplayContents(element))
+        return true;
     if (element.rendererIsNeeded(newStyle))
         return true;
     if (element.shouldMoveToFlowThread(newStyle))
@@ -373,7 +376,7 @@ void TreeResolver::resolveComposedTree()
         ElementUpdate update;
         update.style = element.renderStyle();
 
-        bool shouldResolve = parent.change >= Inherit || element.needsStyleRecalc() || shouldResolveForPseudoElement || affectedByPreviousSibling || element.hasDisplayContents();
+        bool shouldResolve = parent.change >= Inherit || element.needsStyleRecalc() || shouldResolveForPseudoElement || affectedByPreviousSibling || hasImplicitDisplayContents(element);
         if (shouldResolve) {
 #if PLATFORM(IOS)
             CheckForVisibilityChangeOnRecalcStyle checkForVisibilityChange(&element, element.renderStyle());
