@@ -1,3 +1,7 @@
+2016-04-07  Antti Koivisto  <antti@apple.com>
+
+        Reverting previous due to bad LayoutTest ChangeLog.
+
 2016-04-06  Antti Koivisto  <antti@apple.com>
 
         Shadow DOM: Implement display: contents for slots
